// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Attio's assertRecord destination action: all fields 1`] = `
Object {
  "data": Object {
    "values": Object {
      "name": "]PjNEM",
    },
  },
}
`;

exports[`Testing snapshot for Attio's assertRecord destination action: required fields 1`] = `
Object {
  "data": Object {
    "values": Object {},
  },
}
`;
